# PDF-RAG-app

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  mlflow.db  pyproject.toml
.github/workflows/: lint.yml
config/: config.yaml  debug_eval_golden_dataset.json  eval_gold_dataset.json  eval_golden_dataset.json
data/chroma_db/5a69b928-f7ec-48dc-8851-1a64fcf9aca5/: index_metadata.pickle
data/chroma_db/ac08b641-a958-44bd-9536-9b48345c5769/: index_metadata.pickle
data/texts/: papaer1.txt  paper2.txt
data/uploads/: 2104.02710v4.txt
mlflow/artifacts/: eval_details_retrieval.csv
src/pdf_rag/rag/: embedding.py  generate.py  ingest.py  pipeline.py  retrieve.py  vectorize.py
src/pdf_rag/rag/evals/: evals.py  mlflow.py  mlflow_log.py
src/pdf_rag/rag/evals/logs/generator/: eval_report_20260102_071423.txt  eval_report_20260105_023907.txt  eval_report_20260105_024723.txt  eval_report_20260105_025915.txt  eval_report_20260105_030534.txt  eval_report_20260105_032713.txt  eval_report_20260105_035603.txt  eval_report_20260105_204033.txt
src/pdf_rag/rag/evals/logs/retrieval/: eval_report_20260101_234643.txt  eval_report_20260101_235221.txt  eval_report_20260102_000013.txt  eval_report_20260102_002029.txt  eval_report_20260102_064302.txt  eval_report_20260104_161705.txt  eval_report_20260105_201510.txt  eval_report_20260105_201935.txt  eval_report_20260105_203034.txt  eval_report_20260105_203707.txt
src/pdf_rag/ui/: app.py
src/pdf_rag/utils/: config.py
