[project]
name = "pdf-rag-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "streamlit[pdf]",
  "langchain",
  "streamlit-pdf-viewer>=0.0.26",
  "pdfminer-six>=20251107",
  "langchain-core>=1.2.5",
  "langchain-openai>=1.1.6",
  "langchain-chroma",
]

[dependency-groups]
dev = [
  "pytest"
]