[project]
name = "pdf-rag-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "streamlit[pdf]>=1.52.2",
  "langchain>=1.2.0",
  "streamlit-pdf-viewer>=0.0.26",
  "langchain-core>=1.2.5",
  "langchain-openai>=1.1.6",
  "langchain-chroma>=1.1.0",
  "ragas>=0.4.2",
  "pandas>=2.3.3",
  "openai>=2.14.0",
  "pymupdf>=1.26.7",
]

[dependency-groups]
dev = [
  "pytest"
]
