[project]
name = "pdf-rag-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "streamlit[pdf]>=1.52.2",
  "langchain>=0.3.0",
  "streamlit-pdf-viewer>=0.0.26",
  "langchain-core>=1.2.5",
  "langchain-openai>=1.1.6",
  "langchain-chroma>=1.1.0",
  "ragas>=0.4.2",
  "pandas>=2.3.3",
  "openai>=2.14.0",
  "pymupdf>=1.26.7",
  "langsmith>=0.5.1",
  "rank-bm25>=0.2.2",
  "langchain-community>=0.4.1",
  "langchain-classic>=1.0.1",
  "mlflow>=3.8.1",
]

[dependency-groups]
dev = [
  "pytest"
]
